<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dip"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/test"
            style="@style/BlackText"
            android:gravity="center"
            android:singleLine="true" />

        <TextView
            android:id="@+id/dialog_message"
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:gravity="center|left"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/test" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_left"
                style="@style/btn_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_play" />
            <Button
                android:id="@+id/dialog_right"
                style="@style/btn_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>